# quantum_error_correction

./: .gitignore  A100_TRAIN.sh  Hx_test.txt  QEC_MWPM.py  QEC_PACKAGE_STRUCTURE.md  README.md  README_STIM.md  WORKFLOW_GUIDE.md  logX_test.txt  main.py  pyproject.toml  setup.py  stim_mapping_L5.npy  test_qubit_centric.py
QEC_FFNN/: Main_FFNN.py  Model_FFNN.py
QEC_FFNN/Codes_DB/: Hx_surface_L3.txt  Hx_surface_L5.txt  Hz_surface_L15.txt  Hz_surface_L7.txt
QEC_Transformer/: Hx_test.txt  Main_Transformer.py  Main_Transformer_cpu.py  Model_Transformer.py  __init__.py
QEC_Transformer/Codes_DB/: Hx_surface_L15.txt  Hx_surface_L9.txt  Hz_surface_L3.txt  Lx_surface_L3.txt  Lx_surface_L7.txt  Lx_surface_L9.txt  Lz_surface_L11.txt
common/: Codes.py
common/Codes_DB/: Hx_surface_L11.txt  Hz_surface_L9.txt  Lx_surface_L11.txt  Lx_surface_L15.txt  Lz_surface_L15.txt  Lz_surface_L3.txt
docs/: HARDWARE_OPTIMIZATION_GUIDE.md  diamond_cnn_analysis.md  noise_model_discussion.md  training_process_detailed.md  y_ratio_analysis.md
examples/: README_SIMULATION.md  demo_quantum_computer.py
qec/: __init__.py
qec/core/: __init__.py  codes.py  stim_circuits.py
qec/data/: __init__.py  circuit_level.py
qec/decoders/: __init__.py  mwpm.py
qec/evaluation/: __init__.py  compare_decoders.py  compare_decoders_stim.py
qec/models/: __init__.py  cnn.py  diamond_cnn.py  ffnn.py  hqmt.py  jung_cnn.py  qubit_centric.py  transformer.py  vit.py
qec/training/: __init__.py  circuit_level.py  cnn.py  common.py  compare_decoders.py  ffnn.py  jung_cnn.py  qubit_centric.py  test_mwpm.py  train_ffnn.py  train_paper_models.py  train_transformer.py  train_with_stim.py  transformer.py  vit.py
qec/utils/: __init__.py  (+1 more)
scripts/: draw_transformer_architecture.py  last_plot.py  plot_L3.py  plot_L5.py  plot_L7.py  plot_L7_2.py  plot_by_L.py  plot_threshold_comparison.py  train_depolarizing.sh  train_session1.sh  train_session2.sh  visualize_models.py
tutorials/: 1_surface_code_encoding.ipynb
(+57 files in other folders)
