[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "qec"
version = "0.1.0"
description = "Quantum Error Correction using Deep Learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["quantum", "error-correction", "deep-learning", "pytorch", "transformer", "ffnn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "pymatching>=2.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "jupyter>=1.0.0",
]
intel = [
    "intel-extension-for-pytorch>=2.0.0",
]

[project.scripts]
qec-train-transformer = "qec.training.train_transformer:main"
qec-train-ffnn = "qec.training.train_ffnn:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
